// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $3.00
  </h2>
</div>
`;

exports[`should render ExpensesSummary with multiples expenses 1`] = `
<div>
  <h2>
    Viewing 
    7
     
    expenses
     totaling 
    $858,958.94
  </h2>
</div>
`;
